Fix font size, color and alignment

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,3 +1,7 @@
 div{
     background-color: red;
+    color:white;
+    font-size: 32px;
+    font-weight: 550;
+    text-align: center;
 }
